lib/lb/10-traefik-alpha.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-alpha
  namespace: lb
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      affinity:
        podAntiAffinity:
          # Don't put this deployment on node where a pod already has 'app: traefik'
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: traefik
      containers:
      - image: traefik:v2.3
        imagePullPolicy: Always
        name: traefik
        args:
          - --configfile=/etc/traefik/traefik.yaml
        volumeMounts:
          - name: traefik-config
            mountPath: /etc/traefik/
          - name: traefik-acme-alpha
            mountPath: /opt/traefik/
        ports:
          - containerPort: 80
            name: proxy
            protocol: TCP
          - containerPort: 8081
            name: dashboard
            protocol: TCP
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
            items:
              - key: traefik.yaml
                path: traefik.yaml
        - name: traefik-acme-alpha
          persistentVolumeClaim:
            claimName: traefik-acme-alpha
      restartPolicy: Always
---
