lib/lb/10-traefik-beta.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-beta
  namespace: lb
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      affinity:
        podAntiAffinity:
          # Don't put this deployment on node where a pod already has 'app: traefik'
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 30
      containers:
      - image: nginx:1.15
        imagePullPolicy: Always
        name: nginx
        args:
          - nginx
          - -c
          - /opt/nginx/nginx.conf
        volumeMounts:
          - name: nginx-conf
            mountPath: /opt/nginx/
          - name: nginx-temp
            mountPath: /var/cache/nginx/
          - name: nginx-www
            mountPath: /usr/share/nginx/www/
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
      - image: traefik:v1.7
        imagePullPolicy: Always
        name: traefik
        args:
          - --configFile=/etc/traefik/traefik.toml
        volumeMounts:
          - name: traefik-config
            mountPath: /etc/traefik/
          - name: traefik-acme-beta
            mountPath: /opt/traefik/
        ports:
          - containerPort: 80
            name: proxy
            protocol: TCP
          - containerPort: 8081
            name: dashboard
            protocol: TCP
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
            items:
              - key: traefik.toml
                path: traefik.toml
        - name: traefik-acme-beta
          persistentVolumeClaim:
            claimName: traefik-acme-beta
        - name: nginx-conf
          configMap:
            name: traefik-config
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: default.conf
                path: conf.d/default.conf
        - name: nginx-temp
          emptyDir: {}
        - name: nginx-www
          configMap:
            name: traefik-config
            items:
              - key: metrics
                path: metrics
              - key: index.html
                path: index.html
      restartPolicy: Always

---
