lib/lb/10-traefik-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: lb
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: proxy
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: lb
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
