lib/lb/10-traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: lb
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: proxy
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: lb
  annotations:
    # We split traefik ports into two services so we can lockdown the dashboard
    # to internal requests (and then filter those through an auth proxy).
    # traefik.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8"
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: lb
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-host: "infra.moov.io"
    ingress.kubernetes.io/ssl-force-host: "true"
spec:
  rules:
    - host: infra.moov.io
      http:
        paths:
          - path: /traefik/
            backend:
              serviceName: traefik-dashboard
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: lb
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: traefik
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik
  namespace: lb
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 30
      containers:
      - image: traefik:v1.7
        imagePullPolicy: Always
        name: traefik
        args:
          - --configFile=/etc/traefik/traefik.toml
        volumeMounts:
          - name: traefik-config
            mountPath: /etc/traefik/
          - name: traefik-acme
            mountPath: /opt/traefik/
        ports:
          - containerPort: 80
            name: proxy
            protocol: TCP
          - containerPort: 8080
            name: dashboard
            protocol: TCP
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
            items:
              - key: traefik.toml
                path: traefik.toml
        - name: traefik-acme
          persistentVolumeClaim:
            claimName: traefik-acme
      restartPolicy: Always

---
